# PACE2026

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  docker_setup.sh  generate_pgo_profile.sh  log_filter.ini  pgoData.profdata
.gitlab/issue_templates/: Bug.md  Default.md  Feature.md  Maintenance.md
docs-dot/: DecoupleSubtreeAction.dot
gitlab-ci/bash/: check_errors.sh  cleanup_orphan_jobs.sh  monitor_job.sh  submit_job.sh
gitlab-ci/slurm/: 3h_run.slurm  quick_run.slurm  release_run.slurm  run_stride.slurm
pgo/: .pgodatagen.sh.kate-swp  pgodatagen.sh
pgo/Instances/: i7.nw
res/examples/: forest1.tree  instance1.tree  test2.dot  test2.tree  test3.tree  tree1.tree  tree2.tree
res/instances/: 100leaves.lst  100leaves_2trees.lst  100leaves_2trees_v2.lst  100leaves_v2.lst  200leaves.lst  200leaves_2trees.lst  200leaves_2trees_v2.lst  200leaves_v2.lst  20leaves.lst  20leaves_2trees.lst  30leaves.lst  30leaves_2trees.lst  50leaves.lst  50leaves_2trees.lst  50leaves_2trees_v2.lst  50leaves_v2.lst  all.lst  all_2trees.lst  all_2trees_v2.lst  all_v2.lst  collect-test-instances.py  mixed.lst  pace26_exact_pub.lst  pace26_exact_pub_v2.lst  pace26_heuristic_pub.lst  pace26_heuristic_pub_v2.lst  pace26_lower_pub_v2.lst  pace26_lower_pub_v3.lst  short_100leaves.lst  short_100leaves_2trees.lst  short_200leaves.lst  short_200leaves_2trees.lst  short_20leaves.lst  short_20leaves_2trees.lst  short_30leaves.lst  short_30leaves_2trees.lst  short_50leaves.lst  short_50leaves_2trees.lst  short_all.lst  (+5 more)
src/: CMakeLists.txt  main.cpp  solver.cpp  startSolver.cpp
src/Cluster/: CMakeLists.txt  ClusterInstance.cpp  ClusterInstance.hpp  ClusterPointGenerator.cpp  ClusterPointGenerator.hpp  InteriorTwinRelation.cpp  InteriorTwinRelation.hpp  LabelTwinRelation.cpp  LabelTwinRelation.hpp  LeastCommonAncestor.cpp  LeastCommonAncestor.hpp  RecursiveClusterer.cpp  RecursiveClusterer.hpp  TwinRelation.cpp  TwinRelation.hpp
src/Graph/: CMakeLists.txt  ClusterInstance.cpp  ClusterInstance.hpp  ClusterPointGenerator.cpp  ClusterPointGenerator.hpp  Forest.cpp  Forest.hpp  ForestIO.cpp  ForestIO.hpp  Instance.cpp  Instance.hpp  InteriorTwinRelation.cpp  InteriorTwinRelation.hpp  LabelToTerminalMap.hpp  LabelTwinRelation.cpp  LabelTwinRelation.hpp  LeastCommonAncestor.cpp  LeastCommonAncestor.hpp  Node.cpp  Node.hpp  PartialForest.cpp  PartialForest.h  RecursiveClusterer.cpp  RecursiveClusterer.hpp  TerminalToLabelView.hpp  Tree.cpp  Tree.hpp  TreeIO.cpp  TreeIO.hpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Solver/: AbstractAction.hpp  AbstractSolver.cpp  AbstractSolver.hpp  BranchingSolver.cpp  BranchingSolver.hpp  BranchingSolverConfiguration.cpp  BranchingSolverConfiguration.hpp  CMakeLists.txt  ClusterSolver.cpp  ClusterSolver.hpp  CollapseSubtreeAction.cpp  CollapseSubtreeAction.hpp  Context.hpp  DebugPlugin.cpp  DebugPlugin.hpp  DeleteEdgeAction.cpp  DeleteEdgeAction.hpp  DualLowerBound.cpp  DualLowerBound.hpp  ReductionSolver.cpp  ReductionSolver.hpp  ReferenceClusterSolver.cpp  ReferenceClusterSolver.hpp  SolverConfig.hpp  SolverConfiguration.cpp  SolverConfiguration.hpp  TrivialSolver.cpp  TrivialSolver.hpp
src/Solver/Action/: AbstractAction.cpp  AbstractAction.hpp  AddEdgeAction.cpp  AddEdgeAction.hpp  CMakeLists.txt  CollapseSubtreeAction.cpp  CollapseSubtreeAction.hpp  DecoupleSubtreeAction.cpp  DecoupleSubtreeAction.hpp  DeleteEdgeAction.cpp  DeleteEdgeAction.hpp  DeleteNodeActionInChains.cpp  DeleteNodeActionInChains.h  DeleteNodeActionInChains.hpp  ShortenChainAction.cpp  ShortenChainAction.hpp
src/Solver/Approximation/: CMakeLists.txt  DualLowerBound.hpp  MutableForestView.hpp  RedBlueDual.cpp  ThreeApproxDual.cpp
src/Solver/Cluster/: CMakeLists.txt  ClusterBudget.cpp  ClusterBudget.hpp  ClusterPointGenerator.cpp  ClusterPointGenerator.hpp  ClusterRange.cpp  ClusterRange.hpp  ClusterSolver.cpp  ClusterSolver.hpp  LeastCommonAncestor.cpp  LeastCommonAncestor.hpp  TwinRelation.cpp  TwinRelation.hpp
src/Solver/Plugin/: AbstractPlugin.cpp  AbstractPlugin.hpp  AbstractStridePlugin.cpp  AbstractStridePlugin.hpp  BranchCountPlugin.cpp  BranchCountPlugin.hpp  CMakeLists.txt  ConvergencePlugin.cpp  ConvergencePlugin.hpp  MetricsCollector.hpp  MetricsPlugins.hpp  RuleStatsPlugin.cpp  RuleStatsPlugin.hpp  SigtermPlugin.cpp  SigtermPlugin.hpp  VisualizationPlugin.cpp  VisualizationPlugin.hpp
src/Solver/Rule/: ABCBranchingRule.cpp  ABCBranchingRule.hpp  ACBranchingRule.cpp  ACBranchingRule.hpp  AbstractBranchingRule.cpp  AbstractBranchingRule.hpp  AbstractRule.cpp  AbstractRule.hpp  BRule.cpp  BRule.hpp  CMakeLists.txt  Case2BRule.cpp  Case2BRule.hpp  ChainReductionRule.cpp  ChainReductionRule.h  ChainReductionRule.hpp  CheckSingleVertexTreesRule.cpp  CheckSingleVertexTreesRule.hpp  ClusterReduction.cpp  ClusterReduction.h  ClusterReductionRule.cpp  ClusterReductionRule.hpp  Context.hpp  CutBranchRule.cpp  CutBranchRule.hpp  DebugAssertFalseRule.cpp  DebugAssertFalseRule.hpp  DebugTrivialSolutionRule.cpp  DebugTrivialSolutionRule.hpp  EqualForestsRule.cpp  EqualForestsRule.hpp  EqualPairReductionRule.cpp  EqualPairReductionRule.hpp  ForcedCherryCutRule.cpp  ForcedCherryCutRule.hpp  GreedyCherryCutRule.cpp  GreedyCherryCutRule.hpp  PairEqualRule.cpp  PairEqualRule.hpp  PairPathBranchingRule.cpp  (+20 more)
tests/: ApproximationConfigTests.cpp  ApproximationTests.cpp  BranchingSolverDeadlineTests.cpp  BranchingSolverSimpleTests.cpp  CMakeLists.txt  Case2BRuleTests.cpp  ChainReductionTests.cpp  ClusterBudgetTests.cpp  ClusterPointTests.cpp  ClusterSolverCountTests.cpp  DeleteEdgeActionTests.cpp  DualLowerBoundTests.cpp  ForcedCherryCutRuleTests.cpp  ForestEqualTests.cpp  ForestIOTests.cpp  ForestRemoveEdgeTests.cpp  ForestSubforestTests.cpp  GreedyCherryCutRuleTests.cpp  MetricsPluginTests.cpp  MiscellaneousTests.cpp  PluginTests.cpp  ReductionSolverTests.cpp  ReverseBRuleTests.cpp  ReverseCaseBRuleTests.cpp  ShortenChainActionTests.cpp  ThreeTwoChainReductionTest.cpp  TreeContractTests.cpp  TreeEqualTests.cpp  TreeIOTests.cpp  TwoBRuleTests.cpp
(+36 files in other folders)
